--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="fonts/css" href="css/fonts.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <title>Concinnitas Apps</title>
 
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+  <meta name="msapplication-TileColor" content="#2b5797">
+  <meta name="theme-color" content="#2ea0ef">
+</head>
+<body>
+  <div class="container">
+    <img class="logo" src="ConcinnitasLogo.png" alt="logo">
+    Future home of Concinnitas Apps
+  </div>
+</body>
+</html>
