--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <link rel="manifest" href="site.webmanifest">
   <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="theme-color" content="#2ea0ef">
+
+  <meta name="description" content="Future homepage of Concinnitas Apps"/>
 </head>
 <body>
   <div class="container">
