--- a/index.html
+++ b/index.html
@@ -12,15 +12,44 @@
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="manifest" href="site.webmanifest">
+  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#2ea0ef">
   <meta name="msapplication-TileColor" content="#2b5797">
-  <meta name="theme-color" content="#2ea0ef">
+  <meta name="theme-color" content="#031b2b">
 
   <meta name="description" content="Future homepage of Concinnitas Apps"/>
 </head>
 <body>
-  <div class="container">
-    <img class="logo" src="ConcinnitasLogo.png" alt="logo">
-    Future home of Concinnitas Apps
+  <header class="headerClear" id="header">
+    <nav>
+      <ul class="navigation">
+        <li><a class="nav-button">Products</a></li>
+        <li><a class="nav-button">Update</a></li>
+        <li class="whiteLogo">
+          <a href="index.html">
+            <img class="logo" src="img/whiteLogo.png" alt="logo">
+          </a>
+        </li>
+        <li class="blueLogo">
+          <a href="index.html">
+            <img class="logo" src="img/blueLogo.png" alt="logo">
+          </a>
+        </li>
+        <li><a class="nav-button">Privacy Policy</a></li>
+        <li><a class="nav-button">About</a></li>
+      </ul>
+    </nav>
+  </header>
+  <div class="productContainer">
+    <div class="slide tabs-aside">
+      <a class="prev">&#10094;</a>
+      <a class="next">&#10095;</a>
+    </div>
   </div>
+  <h1>Products</h1>
+  <div class="product">
+    <img src="img/TabsAsideIcon.png" alt="Tabs Aside Icon">
+    Tabs Aside - Coming Soon!
+  </div>
+  <script src="main.js"></script>
 </body>
 </html>
