--- a/privacy.html
+++ b/privacy.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="fonts/css" href="css/fonts.css">
   <link rel="stylesheet" type="text/css" href="css/nav.css">
-  <link rel="stylesheet" type="text/css" href="css/index.css">
+  <link rel="stylesheet" type="text/css" href="css/secondary.css">
+
   <title>Concinnitas Apps</title>
 
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -23,22 +24,9 @@
   <header id="header">
   <div class="white-header-background"></div>
     <nav>
-      <div class="transparent-nav">
+      <div class="block white-nav">
         <ul class="navigation">
-          <li><a class="nav-button clear" href="#products">Products</a></li>
-          <li><a href="update.html" class="nav-button clear">Update</a></li>
-          <li class="whiteLogo">
-            <a href="#">
-              <img class="logo" src="img/whiteLogo.png" alt="logo">
-            </a>
-          </li>
-          <li><a href="privacy.html" class="nav-button clear">Privacy Policy</a></li>
-          <li><a  href="about.html" class="nav-button clear">About</a></li>
-        </ul>
-      </div>
-      <div class="white-nav">
-        <ul class="navigation">
-          <li><a class="nav-button blue">Products</a></li>
+          <li><a a href="index.html#products" class="nav-button blue">Products</a></li>
           <li><a href="update.html" class="nav-button blue">Update</a></li>
           <li class="whiteLogo">
             <a href="index.html">
@@ -52,23 +40,16 @@
     </nav>
   </header>
 
-  <div class="product-container">
-    <div class="slide tabs-aside">
-      <a class="prev">&#10094;</a>
-      <a class="next">&#10095;</a>
-    </div>
-  </div>
+  <h1>Privacy Policy</h1>
 
-  <h1 id="products">Products</h1>
-  <div class="product">
-    <img src="img/TabsAsideIcon.png" class="product-icon" alt="Tabs Aside Icon">
-    <div class="product-info">
-      <h2>Tabs Aside</h2>
-      <p class="productIntro">Tabs Aside remembers your open tabs for later so you don't have to.</p>
-      <a class="productLink" href="https://chrome.google.com/webstore/detail/nboikgnmjgjcnnhencinblbaikdccdlb">View in Chrome Web Store</a>
-    </div>
-  </div>
+  <p class="main-text">
+    Your privacy is extremely important to me! I make software for fun and I don't need, or want, your personal info. I hate having my information out there too.
+  </p>
 
-  <script src="main.js"></script>
+  <p class="main-text">
+    This page will be updated if anything does change. If it does, with your full permission (no strings attached!), the information collected will go towards improving the extensions.
+  </p>
+
+  <p class="main-text">(btw I can't afford a lawyer to make this professional looking)</p>
 </body>
 </html>
