--- a/index.html
+++ b/index.html
@@ -1,74 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="fonts/css" href="css/fonts.css">
-  <link rel="stylesheet" type="text/css" href="css/nav.css">
-  <link rel="stylesheet" type="text/css" href="css/index.css">
-  <title>Concinnitas Apps</title>
+    <meta charset="UTF-8">
+    <title>Coming Soon</title>
 
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#2ea0ef">
-  <meta name="msapplication-TileColor" content="#2b5797">
-  <meta name="theme-color" content="#031b2b">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
 
-  <meta name="description" content="Future homepage of Concinnitas Apps"/>
+    <link rel="stylesheet" href="index.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <!--    <link rel="manifest" href="./site.webmanifest">-->
+    <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#158ee5">
+    <meta name="msapplication-TileColor" content="#2d89ef">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-  <header id="header">
-  <div class="white-header-background"></div>
-    <nav>
-      <div class="transparent-nav">
-        <ul class="navigation">
-          <li><a class="nav-button clear" href="#products">Products</a></li>
-          <li><a href="update.html" class="nav-button clear">Update</a></li>
-          <li class="whiteLogo">
-            <a href="#">
-              <img class="logo" src="img/whiteLogo.png" alt="logo">
-            </a>
-          </li>
-          <li><a href="privacy.html" class="nav-button clear">Privacy Policy</a></li>
-          <li><a  href="about.html" class="nav-button clear">About</a></li>
-        </ul>
-      </div>
-      <div class="white-nav">
-        <ul class="navigation">
-          <li><a class="nav-button blue">Products</a></li>
-          <li><a href="update.html" class="nav-button blue">Update</a></li>
-          <li class="whiteLogo">
-            <a href="index.html">
-              <img class="logo" src="img/blueLogo.png" alt="logo">
-            </a>
-          </li>
-          <li><a href="privacy.html" class="nav-button blue">Privacy Policy</a></li>
-          <li><a href="about.html" class="nav-button blue">About</a></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-
-  <div class="product-container">
-    <div class="slide tabs-aside">
-      <a class="prev">&#10094;</a>
-      <a class="next">&#10095;</a>
+    <div id="page-1" class="centered">
+        <div class="animate-container">
+            <div class="animate-up" id="coming-soon">Coming Soon!</div>
+        </div>
     </div>
-  </div>
 
-  <h1 id="products">Products</h1>
-  <div class="product">
-    <img src="img/TabsAsideIcon.png" class="product-icon" alt="Tabs Aside Icon">
-    <div class="product-info">
-      <h2>Tabs Aside</h2>
-      <p class="productIntro">Tabs Aside remembers your open tabs for later so you don't have to.</p>
-      <a class="productLink" href="https://chrome.google.com/webstore/detail/nboikgnmjgjcnnhencinblbaikdccdlb">View in Chrome Web Store</a>
-    </div>
-  </div>
+    <img src="round.png" alt="logo" id="logo">
 
-  <script src="main.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
